[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/chat/config/RegexTester.gd" type="Script" id=1]

[node name="RegexTester" type="Popup"]
visible = true
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 1 )

[node name="PanelCon" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 250, 0 )

[node name="VBox" type="VBoxContainer" parent="PanelCon"]
offset_left = 7.0
offset_top = 7.0
offset_right = 243.0
offset_bottom = 77.0

[node name="HBox" type="HBoxContainer" parent="PanelCon/VBox"]
offset_right = 236.0
offset_bottom = 24.0

[node name="Label" type="Label" parent="PanelCon/VBox/HBox"]
offset_top = 5.0
offset_right = 42.0
offset_bottom = 19.0
text = "Regex:"

[node name="Regex" type="LineEdit" parent="PanelCon/VBox/HBox"]
offset_left = 46.0
offset_right = 236.0
offset_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Enter pattern"

[node name="Test" type="LineEdit" parent="PanelCon/VBox"]
offset_top = 28.0
offset_right = 236.0
offset_bottom = 52.0
custom_minimum_size = Vector2( 150, 0 )
placeholder_text = "Enter text to test"

[node name="Output" type="Label" parent="PanelCon/VBox"]
offset_top = 56.0
offset_right = 236.0
offset_bottom = 70.0

[connection signal="text_changed" from="PanelCon/VBox/HBox/Regex" to="." method="_on_Regex_text_changed"]
[connection signal="text_changed" from="PanelCon/VBox/Test" to="." method="_on_Test_text_changed"]
